--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        
+		<dependency>
+		    <groupId>jdk.tools</groupId>
+		    <artifactId>jdk.tools</artifactId>
+		    <version>1.4.2</version>
+		    <scope>system</scope>
+		    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>        
     </dependencies>
 
     <profiles>
